--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react": "18.2.0",
     "react-apexcharts": "1.4.0",
     "react-dom": "18.2.0",
+    "react-full-screen": "^1.1.1",
     "react-helmet-async": "1.3.0",
     "react-hook-form": "^7.51.3",
     "react-hot-toast": "2.4.1",
@@ -62,6 +63,7 @@
     "react-router": "6.14.1",
     "react-router-dom": "6.14.1",
     "react-slick": "0.29.0",
+    "react-zoom-pan-pinch": "^3.6.1",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "simplebar-react": "3.2.4",
